--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -80,7 +80,7 @@
       <div class="card-header"><i class="fa fa-check" style="color: #469AE0;"></i> Sécurisé</div>
         <div class="card-body">
           <h5 class="card-title"><i class="fas fa-caret-right" style="color: #469AE0;"></i> Sécurisé</h5>
-          <p class="card-text">Une fois l'échange conclus vous pouvez rapidement procéder à l'échange soit en main propre soit par envoie postal avec notre système de caution qui empèche les anarques.</p>
+          <p class="card-text">Une fois l'échange conclus vous pouvez rapidement procéder à l'échange soit en main propre soit par envoie postal avec notre système de caution qui vous assure un remboursement en cas de problèmes.</p>
         </div>
     </div>
 
