panel admin echanges

--- a/app/views/admin/annonces/edit.html.erb
+++ b/app/views/admin/annonces/edit.html.erb
@@ -42,7 +42,7 @@
         <p><%= f.radio_button :typeechange, '2' %> Les deux</p>
       </div>
       <hr>
-      <%= f.submit "Mettre l'annonce à jour", class: "btn btn-primary" %>
+      <%= f.submit "Mettre l'annonce à jour", class: "btn btn-outline-primary" %>
     <% end %>
   </div>
 </div>
