--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -20,7 +20,7 @@
           <%= f.input :password_confirmation, required: false, placeholder: "Laisser vide si vous ne souhaitez pas le changer", label: 'Confirmation mot de passe' %>
           <hr>
 <!--           <%= f.input :current_password, placeholder: @user.password, required: true, label: 'Mot de passe actuel', error: 'Nous avons besoin de votre mot de passe actuel pour effectuer les changements.', value: @user.password %> -->
-          <%= f.button :submit, "Mettre à jour", class: "btn btn-success" %>
+          <%= f.button :submit, "Mettre à jour", class: "btn btn-outline-success" %>
         <% end %>
   </div>
 </div>
