--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'admin/shared/navbar-admin' %>
 <div class="container">
-<%= link_to new_admin_user_path, class: "float-right btn btn-primary btn-sm", style: 'color:white;' do %>
+<%= link_to new_admin_user_path, class: "float-right btn btn-outline-primary btn-sm", style: 'color:white;' do %>
   <i class="fa fa-plus"></i> Nouvelle utilisateur
 <% end %>
   <nav>
