--- a/app/views/annonces/edit.html.erb
+++ b/app/views/annonces/edit.html.erb
@@ -42,7 +42,7 @@
         <p><%= f.radio_button :typeechange, '2' %> Les deux</p>
       </div>
       <hr>
-      <%= f.submit "Mettre l'annonce à jour", data: {confirm: "Une fois l'annonce modifié, elle sera soumise à une nouvelle vérification de la part de notre staff et ne sera plus disponible sur le site jusqu'a sa vérification, etes vous sur de vouloir la modifier ?"}, class: "btn btn-primary" %>
+      <%= f.submit "Mettre l'annonce à jour", data: {confirm: "Une fois l'annonce modifié, elle sera soumise à une nouvelle vérification de la part de notre staff et ne sera plus disponible sur le site jusqu'a sa vérification, etes vous sur de vouloir la modifier ?"}, class: "btn btn-outline-primary" %>
   <!--     <div style="padding-top:10px;">
         <p><i class="fa fa-list"></i> <%= link_to "Retour à vos annonces",  vos_annonces_path %> | <i class="fa fa-history"></i> <%= link_to "Retour aux annonces",  annonces_path %></p>
       </div> -->
