--- a/app/views/annonces/new.html.erb
+++ b/app/views/annonces/new.html.erb
@@ -42,7 +42,7 @@
         <p><%= f.radio_button :typeechange, '2' %> Les deux</p>
       </div>
       <hr>
-      <%= f.submit "Créer votre annonce", class: "btn btn-primary" %>
+      <%= f.submit "Créer votre annonce", class: "btn btn-outline-primary" %>
     <% end %>
   </div>
 </div>
