--- a/app/assets/stylesheets/layouts/_utilities.scss
+++ b/app/assets/stylesheets/layouts/_utilities.scss
@@ -84,3 +84,10 @@ h1, h2, h3 { margin-top: 20px;}
   box-shadow: 0 0px 5px rgba(0, 0, 0, 0.45);
   transition: all 0.5s ease-in-out;
 }
+
+.btn-cards-stick-bottom {
+  position:absolute;
+  bottom:10px;
+  left:14px;
+  width:90%;
+}
