--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -35,7 +35,7 @@
             <div id="card-errors" role="alert"></div>
           </div> -->
           <div class="form-actions">
-            <%= f.button :submit, "Créé l'utilisateur", class: "btn btn-success", style: "width:100%; margin-bottom:15px;"%>
+            <%= f.button :submit, "Créé l'utilisateur", class: "btn btn-outline-success", style: "width:100%; margin-bottom:15px;"%>
           </div>
         <% end %>
       </div>
