--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
           <div id="card-errors" role="alert"></div>
         </div> -->
         <div class="form-actions">
-          <%= f.button :submit, "S'enregistrer", class: "btn btn-success", style: "width:100%; margin-bottom:15px;"%>
+          <%= f.button :submit, "S'enregistrer", class: "btn btn-outline-success", style: "width:100%; margin-bottom:15px;"%>
         </div>
       <% end %>
     <%= render "devise/shared/links" %>
