--- a/app/views/admin/echanges/index.html.erb
+++ b/app/views/admin/echanges/index.html.erb
@@ -15,7 +15,7 @@
       <% @echanges_en_attente.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-secondary my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-secondary mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
@@ -77,7 +77,7 @@
       <% @echanges_en_cours.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-warning my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-warning mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
@@ -139,7 +139,7 @@
       <% @echanges_refuser.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-danger my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-danger mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
@@ -201,7 +201,7 @@
       <% @echanges_annuler.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-danger my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-danger mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
@@ -259,7 +259,7 @@
       <% @echanges_finit.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-success my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-success mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
@@ -321,7 +321,7 @@
       <% @echanges_en_conflit.each do |echange| %>
         <div class="row">
           <div class="col-md-12">
-            <a class="btn btn-outline-danger my-3 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
+            <a class="btn btn-outline-danger mt-3 mb-2 w-100" data-toggle="collapse" href="#echange-<%= echange.id %>" role="button" aria-expanded="false" aria-controls="collapse">
             <div class="flex-around">
               <i class="fas fa-exchange-alt"></i>
               <span>Demandeur : <b><%= echange.user_demandeur.pseudo %></b> (objet: <b><%= echange.objetdemandeur_titre %></b>)</span>
