--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,11 +23,15 @@
           <%= f.input :password_confirmation, required: false, placeholder: "Laisser vide si vous ne souhaitez pas le changer", label: 'Confirmation mot de passe' %>
           <hr>
           <%= f.input :current_password, placeholder: "Nous avons besoin de votre mot de passe actuel pour effectuer les changements", required: true, label: 'Mot de passe actuel', error: 'Nous avons besoin de votre mot de passe actuel pour effectuer les changements.' %>
-          <%= f.button :submit, "Mettre à jour", class: "btn btn-outline-success" %>
+          <%= button_tag type:'submit', class: "btn btn-outline-success" do %>
+            <i class="fas fa-pen-square"></i> Mettre à jour
+          <% end %>
         <% end %>
 
         <hr>
 
-        <%= link_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-outline-danger", data: { confirm: "Etes vous sur de vouloir supprimer votre compte ?" }, method: :delete %>
+        <%= link_to registration_path(resource_name), class: "btn btn-outline-danger", data: { confirm: "Etes vous sur de vouloir supprimer votre compte ?" }, method: :delete do %>
+          <i class="far fa-trash-alt"></i> Supprimer mon compte
+        <% end %>
   </div>
 </div>
