--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,13 +32,14 @@
           <div id="card-errors" role="alert"></div>
         </div> -->
         <div class="form-actions">
-          <%= f.button :submit, "S'enregistrer", class: "btn btn-outline-success", style: "width:100%; margin-bottom:15px;"%>
+          <%= button_tag type: 'submit', class: "btn btn-block btn-outline-success", style: "margin-bottom:15px;" do %>
+            S'enregister <i class="fas fa-arrow-alt-circle-right"></i>
+          <% end %>
         </div>
       <% end %>
     <%= render "devise/shared/links" %>
     </div>
 </div>
-<script src="https://js.stripe.com/v3/"></script>
 
 <% content_for(:after_js) do %>
   <script>
