--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,7 @@
         <!-- Links when logged in -->
         <%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
         <%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+        <%= link_to '<i class="fas fa-exchange-alt"></i> Mes échanges'.html_safe, vos_echanges_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
         <% if current_user.admin == true %>
          <%= link_to '<i class="fas fa-user-shield"></i> Panel admin'.html_safe, admin_dashboard_index_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
         <% end %>
@@ -23,7 +24,7 @@
             <%= link_to '<i class="fa fa-user"></i> Mon compte'.html_safe, "#", class: "navbar-lebontroc-link dropdown-toggle", id: "navbar-lebontroc-menu", "data-toggle" => "dropdown" %>
             <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
               <li><%= link_to '<i class="fas fa-envelope"></i> Messages'.html_safe, conversations_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
-              <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, vos_echanges_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+<!--               <li><%= link_to '<i class="fas fa-exchange-alt"></i> Echanges'.html_safe, vos_echanges_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li> -->
               <li>
                 <%= link_to edit_user_registration_path do %>
                   <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
